Description: client OST exclusion list
Details    : Clients can be started with a list of OSTs that should be
	     declared "inactive" for known non-responsive OSTs.

Severity   : minor
Bugzilla   : 6062
Description: SPEC SFS validation failure on NFS v2 over lustre.
Details    : Changes the blocksize for regular files to be 2x RPC size,
             and not depend on stripe size.
	
	
	
------------------------------------------------------------------------------

tbd         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.4.7
       * Support for kernels:
	2.6.9-34.EL (RHEL 4)
	2.6.5-7.252 (SLES 9)
	2.6.12.6 vanilla (kernel.org)
       * bug fixes

Severity   : major
Frequency  : rare
Bugzilla   : 5719, 9635, 9792, 9684, 
Description: OST (or MDS) trips assertions in (re)connection under heavy load
Details    : If a server is under heavy load and cannot reply to new
	     connection requests before the client resends the (re)connect,
	     the connection handling code can behave badly if two service
	     threads are concurrently handing separate (re)connections from
	     the same client.  Add better locking to the connection handling
	     code, and ensure that only a single connection will be processed
	     for a given client UUID, even if the lock is dropped.

Severity   : enhancement
Bugzilla   : 3627
Description: add TCP zero-copy support to kernel
Details    : Add support to the kernel TCP stack to allow zero-copy bulk
	     sends if the hardware supports scatter-gather and checksumming.
	     This allows socklnd to do client-write and server-read more
	     efficiently and reduce CPU utilization from skbuf copying.

Severity   : minor
Frequency  : only if NFS exporting from client
Bugzilla   : 10258
Description: NULL pointer deref in ll_iocontrol() if chattr mknod file
Details    : If setting attributes on a file created under NFS that had
	     never been opened it would be possible to oops the client